# bpb_analysis

./: .gitignore  00_baseline_analysis.py  01_relative_winrate.py  02_cooccurrence.py  03_reaper_clustering.py  04_graph_winrate.py  05_build_variations.py  asdf.csv  main.py  pyproject.toml
bpb_out/: bpp.duckdb  cooccurrence_final.csv  item_freq_final.csv  item_freq_overall.csv  overview_metrics.csv  reaper_clusters_assignment.csv  reaper_clusters_core_items.csv  reaper_clusters_item_stats.csv  reaper_clusters_summary.csv  relative_winrate_by_round.csv  round_reached.csv  winrate_by_final_round.csv
bpb_out/raw/: bpb_match_1.json  bpb_match_10.json  bpb_match_100.json  bpb_match_101.json  bpb_match_102.json  bpb_match_103.json  bpb_match_104.json  bpb_match_105.json  bpb_match_106.json  bpb_match_107.json  bpb_match_108.json  bpb_match_109.json  bpb_match_11.json  bpb_match_110.json  bpb_match_111.json  bpb_match_112.json  bpb_match_113.json  bpb_match_114.json  bpb_match_115.json  bpb_match_116.json  bpb_match_117.json  bpb_match_118.json  bpb_match_119.json  bpb_match_12.json  bpb_match_120.json  bpb_match_121.json  bpb_match_122.json  bpb_match_123.json  bpb_match_124.json  bpb_match_125.json  bpb_match_126.json  bpb_match_127.json  bpb_match_128.json  bpb_match_129.json  bpb_match_13.json  bpb_match_130.json  bpb_match_131.json  bpb_match_132.json  bpb_match_133.json  bpb_match_134.json  (+1025 more)
