[project]
name = "backpackbattles-extract"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.1.0",
    "duckdb>=1.3.2",
    "matplotlib>=3.10.6",
    "orjson>=3.11.3",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
